--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "ai": "^2.2.25",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
+    "lucide-react": "^0.105.0-alpha.4",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
+    "openai-edge": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
+    "sonner": "^1.2.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
   },
@@ -40,6 +46,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
